--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <header class="header">
       <div class="logo"> КиноПульс </div>
-      <form action="" class="search">
+      <form action="#" class="search">
         <input type="search" class="search-input"
           placeholder="Фильмы, сериалы, актеры">
         <button type="submit" class="search-button">
@@ -116,6 +116,13 @@
 
             </div>
             <div class="subscribe">
+              <h3 class="subscribe-title"> Подпишитесь на обновления </h3>
+              <form action="" class="subscribe-form">
+                <input type="text" class="subscribe-input" placeholder="Ваш Email">
+                <button class="subscribe-button">
+                  <img src="img/check.svg" alt="check">
+                </button>
+              </form>
               <a href="#" class="banner">
                 <img src="./img/banner.jpg" alt="banner">
               </a>
