--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                   <img src="img/check.svg" alt="check">
                 </button>
               </form>
-              <a href="#" class="banner">
-                <img src="./img/banner.jpg" alt="banner">
+              <a href="#">
+                <img class="banner" src="./img/banner.jpg" alt="banner">
               </a>
             </div>
           </div>
