Поставлена иконка на закладку

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap&subset=cyrillic"
     rel="stylesheet">
+    <link rel="shortcut icon" href="batman.png" type="image/x-icon">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/animate.css">
